完成登陆注册页面，制作详情页

--- a/html/xiangqing.html
+++ b/html/xiangqing.html
@@ -6,10 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/xiangqing.css">
-    <script src="../js/jquery-3.4.1.js"></script>
-    <script src="../js/xiangqing.js"></script>
+    <!-- <script src="../js/jquery-3.4.1.js"></script>
+    <script src="../js/xiangqing.js"></script> -->
 </head>
 <body>
+
+    <div class="details">
+        <div class="details-content">
+            <div class="details-left">
+                <div class="details-img"></div>
+                <div class="details-img-list"></div>
+            </div>
+            <div class="details-right">
+                <span class="right-top"></span>
+                <h3 class="right-title">SHISEIDO 资生堂 UNO 男士洗面奶 黑炭控油/净透磨砂/润泽温和 130克</h3>
+                <p>黑炭清洁黑科技，一扫肌肤黑势力，控油保湿两不误！遇水后会产生细胍又丰富的泡沫,能够深入毛孔，有效告别附着在毛孔內的污垢，还原洁净美肌，甘油等成分具有吸水作用，恢复肌肤的张力令肌肤时刻水润~</p>
+                <div class="right-pirce">
+                    <div class="pirce-top">
+                        <span class="topa">售价</span>
+                        <span class="topb">¥35.00</span>
+                        <span class="topc">特价</span>
+                        <span class="topd">参考价</span>
+                        <span class="tope">¥110.00</span>
+                    </div>
+                    <div class="pirce-content">
+                        <img src="https://haitao.nosdn1.127.net/6dc03e40-5452-4a3e-a039-1ae8badbce2e_120_45.png?klsize=120x45&imageView&thumbnail=0x34&quality=90" alt="">
+                        <p>黑卡会员预计可</p>
+                        <p>省¥1.4</p>
+                        <p>含会员96折</p>
+                        <a href="">立即开卡</a>
+                    </div>
+                    <div class="pirce-floor"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
