--- a/wangyikaola.html
+++ b/wangyikaola.html
@@ -11,6 +11,14 @@
 
 </head>
 <body>
+    <div class="leftbox">
+        <h4>热门品牌</h4>
+        <ul>
+            <li>美妆专区</li>
+            <li>母婴专区</li>
+            <li>营养保健</li>
+        </ul>
+    </div>
 
     
 
