--- a/wangyikaola.html
+++ b/wangyikaola.html
@@ -14,10 +14,19 @@
     <div class="leftbox">
         <h4>热门品牌</h4>
         <ul>
-            <li>美妆专区</li>
-            <li>母婴专区</li>
-            <li>营养保健</li>
+            <li><a href="#1">美妆专区</a></li>
+            <li><a href="#2">母婴专区</a></li>
+            <li><a href="#3">营养保健</a></li>
+            <li><a href="#4">数码家电</a></li>
+            <li><a href="">个人洗护</a></li>
+            <li><a href="">服饰鞋靴</a></li>
+            <li><a href="">轻奢馆</a></li>
+            <li><a href="">手表配饰</a></li>
+            <li><a href="">运动户外</a></li>
+            <li><a href="">家居生活</a></li>
+            <li><a href="">美食生鲜</a></li>
         </ul>
+        <img src="https://haitao.nos.netease.com/r5RFhBTWXTFTifEGXUFksFGE02_99_49T1811011950_99_128.jpg" alt="">
     </div>
 
     
